[package]
edition = "2018"
name = "narthex_web_app"
version = "0.1.1"
authors = ["Martin <m.e@acm.org>"]
description = "PC support for portable apps"
readme = "README.md"
repository = "https://github.com/martinellison/narthex-web-app"
license = "MPL-2.0"
keywords = ["portable", "cross-platform"]
publish = true

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.44"
log = "0.4.14"
narthex_engine_trait = "0.1.2"
# narthex_engine_trait = {path = "../narthex-engine-trait"}
serde = "1.0.130"
serde_json = "1.0.68"
web-view = "0.7.3"

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
